add some changes to ParallelRunnerWithCucumberReport